master

2.37.4
- zixaphir
  Added Per-Board Personas.
- Mayhem
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
- noface
  Added new feature 'Remove Spoilers'.
  Added input to specify height and width of embeds.
  Fixed Anonymize not working on stubs.
  Fixed deadquotes showing up in code-tags.

2.37.3
- Mayhem
  Added catalog support.
  Sync thread hiding between index and catalog.
  Add /c/ archived thread and image redirection.

2.37.2
- noface
  Added liveleak embedding and Vimeo + SoundCloud Link Title.
  Added keybind for Catalog Links toggle.
  Fixed Anomyize not working on hovered posts.

2.37.1
- noface
  Added Catalog Links toggle.

2.37.0
- noface
  Exclude 4chan x from executing on catalogs.
  Added Link Title for Youtube links.
  Added Ban Checker.

2.36.9
- noface
  Improved Linkifier to be much lighter.
  Readded archiver for /e/.
  Embedding:
    - Adds support for SoundCloud, Vocaroo, mp3/ogg/wav files.
    - Adds a menu button 'Embed all in post'.
- Mayhem
  Fix next/previous page keybinds.

2.36.8
- noface
  Added support for coloured IDs and post highlighting from the native 4chan extension.

2.36.7
- noface
  Added keybinds for math and eqn tags on /sci/.
  Added full image redirection to /mu/.
  Removed ArchiveLink redirection from /soc/ (URLs will still be redirected).
  Quick tags won't be inserted where not possible anymore (like spoilers on /g/).

2.36.6
- noface
  Improved checking for own post directly after posting. This should sort out a number of small hiccups.
  Fixed crossquotes not showing the correct archiver.
  Fixed yet another quirk in blank spoiler detection.

2.36.4
- noface
  Added support for posting with QR and tags on /f/.
  Added redirection for /c/ and /po/.
  Fixed spoiler detection not working on rare occasions.

2.36.3
- noface
  Added keybind to toggle the hide status of the QR.
  If Persistent QR is enabled the close keybind will only hide the QR.